--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-cool-form": "^0.4.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
